gcc/testsuite/rust/rustc/ui/parser/issues/issue-108109-fn-missing-params.rs
//@ run-rustfix

pub fn missing -> () {}
// { dg-error "" "" { target *-*-* } .-1 }

pub fn missing2 {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

